--- a/README
+++ b/README
@@ -4,15 +4,14 @@ A Hopefully Helpful Java Program
 
 This program creates coloured overlays on screen, which can be useful for people with dyslexia.
 
-Note: Unfortunately because of the changes in Java 7, this program does not work with Java 7 
-at the moment.
-
 Usage
 When this program is run, a partially translucent window will appear with the default purple colour.
-This window's size can be adjusted to suit. By right clicking on the window, a menu pops-up with 3
+This overlay's size can be adjusted to suit by holding shift and dragging the sides and corners.
+The size can also be adjusted by holding shift and scrolling the mouse wheel. Holding the left mouse 
+button and moving the mouse moves the overlay. By right clicking on the window, a menu pops-up with 3
 options. About brings up the about page, Options gives you varies options for changing the colour and
-translucence of the window and Exit closes the program. Upon re-opening the window, the previously
-selected colour and translucency are remembered. The window also is always infront of other windows,
+opacity of the overlay and Exit closes the program. Upon re-opening the window, the previously
+selected colour and opacity are remembered. The overlay is also always infront of other windows,
 so putting the overlay over a piece of text in your web browser and then clicking to the side of the
 window on to the web browser allows the text to be scrolled with the overlay remaining in place.
 
@@ -23,8 +22,11 @@ Window 7:
 	C:\Users\YourUserName\AppData\Roaming\Tinted Window\Tinted Window.dat
 Search for %APPDATA% to find other windows version equivalents.
 
-Anything other than Windows:
-	.../YourUserName/.tintedwindow.dat
-
+OSX:
+	/Users/YourUserName/.tintedwindow
+Linux:
+	/home/YourUserName/.tintedwindow
+Other:
+	[your home directory]/.tintedwindow
 	
 Disclaimer: I am not liable for any damage this program does to your computer.
